--- a/zomato.css
+++ b/zomato.css
@@ -1,5 +1,7 @@
 *{
     font-family: Poppins;
+    margin: 0;
+    padding: 0;
     /* background: #FBFBFB 0% 0% no-repeat padding-box;
     opacity: 1; */
 }
@@ -127,17 +129,17 @@ section{
 .head{
     font-size: 30px;
     font-weight: 600;
-    margin-top: -113px;
-    margin-left: 201px;
+    margin-top: -103px;
+    margin-left: 200px;
 }
 .fort{
-    margin-top: -33px;
-    margin-left: 201px;
+    margin-top: 1px;
+    margin-left: 202px;
     font-size: 16px;
 }
 .adress{
-    margin-top: -15px;
-    margin-left: 201px;
+    margin-top: -2px;
+    margin-left: 202px;
     font-size: 16px;
 }
 .image1{
@@ -150,15 +152,16 @@ section{
 }
 hr{
     width: 700px;
+    margin-left: 85px;
 }
 .bakery{
     margin-left: 30px;
 }
 .cuisine1{
-    margin-left: 36px;
+    margin-left: 86px;
 }
 .price1{
-    margin-left: 36px;
+    margin-left: 86px;
 }
 .rupee{
     margin-left: 55px;
